# tpp-sandbox-micro

./: .gitignore  CMakeLists.txt  Container.h  main.cpp  perf.sh  run-me.sh  tool.cpp
mlir/: fat-gemm.mlir  gemm_1024x1024x1024.mlir  gemm_128x128x128.mlir  gemm_32x32x32.mlir  gemm_32x32x64.mlir  gemm_512x1024x512.mlir  gemm_64x64x64.mlir  large_gemm.mlir  large_gemm_pre_packed.mlir  large_gemm_with_fill.mlir  mha_block.mlir  mha_q_times_k.mlir  mha_q_times_k_transposed.mlir  mha_q_times_k_with_transpose.mlir  mid_gemm.mlir  mlp_single_layer.mlir  pack_gemm_operand_a.mlir  pack_gemm_operand_b.mlir  projection_q.mlir  projection_v.mlir  small_gemm.mlir  softmax_times_v.mlir  unpack_gemm_operand.mlir
